# your5e

./: .gitignore  Dockerfile  LICENCE  Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
api/: exceptions.py  tests.py  views.py
api/docs/: authentication.md  index.md  listing_notebook_contents.md  listing_notebooks.md  notebook_pages.md  notebooks.md  ping.md
api/notebooks/: tests.py  views.py
config/: settings.py  urls.py
help/: admin.py  models.py  tests.py  views.py
help/docs/: index.md
help/migrations/: 0001_help_wiki.py
notebooks/: admin.py  forms.py  models.py  tests.py  views.py
notebooks/migrations/: 0001_create_notebook.py  0002_rename_site_to_users.py  0003_rename_users_to_internal.py
tasks/api/: api.md  notebook.md  rate_limit.md  sync.md
tasks/campaigns/: model.md  notebooks.md
tasks/deploy/: deploy.md  email.md  release.md  setup.md  uploads.md
tasks/notebooks/: duplication.md  model.md  view.md
tasks/obsidian_plugin/: sync.md
tasks/site/: hygiene.md
tasks/users/: model.md  profile.md  registration.md  token.md
tasks/wikis/: markdown.md  model.md  (+1 more)
templates/: base.html
tests/: first_sync.bats  first_sync_pull.bats  first_sync_push.bats  setup_helpers.sh  subsequent_sync.bats  subsequent_sync_pull.bats  subsequent_sync_push.bats  sync-notebook.sh  sync.bats  sync.md  sync_permissions.bats  sync_test_matrix.md
users/: admin.py  backends.py  forms.py  models.py  tests.py  views.py
wikis/: admin.py  markdown.py  models.py  tests.py
(+39 files in other folders)
